- fixed lightbox bug (1px visible at the top)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -37,6 +37,12 @@ img {
   border-radius: 2px;
 }
 
+// Fix for lightbox fullscreen showing 1px of page at the top
+
+.yarl__portal_open {
+  outline: 10px solid rgb(0, 0, 0);
+}
+
 // CSS Reset from: https://andy-bell.co.uk/a-modern-css-reset/
 
 /* Box sizing rules */
